--- a/user_admin/finance_laporanKeuangan.html
+++ b/user_admin/finance_laporanKeuangan.html
@@ -28,6 +28,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Fonts -->
 
 		<!--begin::Page Vendors Styles(used by this page) -->
+		<link href="assets/css/vendor/chartjs/chart.min.css" rel="stylesheet" type="text/css" />
 
 		<!--end::Page Vendors Styles -->
 
@@ -445,7 +446,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 </div>
                                             </div>
                                 		</div>
-                            			<div class="chart-height" id="chart_keuangan"></div>
+										<canvas class="chart-height" id="chart_keuangan"></canvas>
                             		</div>
                             	</div>
                             </div>
@@ -469,6 +470,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             </div>
                                 		</div>
                             			<div class="chart-height" id="chart_treatment"></div>
+										<!-- <canvas class="chart-height" id="chart_treatment"></canvas> -->
                             		</div>
                             	</div>
                             </div>
@@ -545,6 +547,8 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="https://www.amcharts.com/lib/4/core.js"></script>
 		<script src="https://www.amcharts.com/lib/4/charts.js"></script>
 		<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+		<script src="assets/js/vendor/chartjs/chart.bundle.min.js" type="text/javascript"></script>
+		<script src="assets/js/vendor/chartjs/chartutils.js" type="text/javascript"></script>
 
 		<!--end::Page Vendors -->
 
@@ -552,128 +556,96 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
 
 		<script>
-			//	Multiple Value Axes amCharts
-			am4core.ready(function() {
-
-			// Themes begin
-			am4core.useTheme(am4themes_animated);
-			// Themes end
-
-			// Create chart instance
-			var chart = am4core.create("chart_keuangan", am4charts.XYChart);
-
-			// Increase contrast by taking evey second color
-			chart.colors.step = 2;
-
-			// Add data
-			chart.data = generateChartData();
-
-			// Create axes
-			var dateAxis = chart.xAxes.push(new am4charts.DateAxis());
-			dateAxis.renderer.minGridDistance = 50;
-
-			// Create series
-			function createAxisAndSeries(field, name, opposite, bullet) {
-			  var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
-
-			  var series = chart.series.push(new am4charts.LineSeries());
-			  series.dataFields.valueY = field;
-			  series.dataFields.dateX = "date";
-			  series.strokeWidth = 2;
-			  series.yAxis = valueAxis;
-			  series.name = name;
-			  series.tooltipText = "{name}: [bold]{valueY}[/]";
-			  series.tensionX = 0.8;
-
-			  var interfaceColors = new am4core.InterfaceColorSet();
-
-			  switch(bullet) {
-			    case "triangle":
-			      var bullet = series.bullets.push(new am4charts.Bullet());
-			      bullet.width = 12;
-			      bullet.height = 12;
-			      bullet.horizontalCenter = "middle";
-			      bullet.verticalCenter = "middle";
-
-			      var triangle = bullet.createChild(am4core.Triangle);
-			      triangle.stroke = interfaceColors.getFor("background");
-			      triangle.strokeWidth = 2;
-			      triangle.direction = "top";
-			      triangle.width = 12;
-			      triangle.height = 12;
-			      break;
-			    case "rectangle":
-			      var bullet = series.bullets.push(new am4charts.Bullet());
-			      bullet.width = 10;
-			      bullet.height = 10;
-			      bullet.horizontalCenter = "middle";
-			      bullet.verticalCenter = "middle";
-
-			      var rectangle = bullet.createChild(am4core.Rectangle);
-			      rectangle.stroke = interfaceColors.getFor("background");
-			      rectangle.strokeWidth = 2;
-			      rectangle.width = 10;
-			      rectangle.height = 10;
-			      break;
-			    default:
-			      var bullet = series.bullets.push(new am4charts.CircleBullet());
-			      bullet.circle.stroke = interfaceColors.getFor("background");
-			      bullet.circle.strokeWidth = 2;
-			      break;
-			  }
-
-			  valueAxis.renderer.line.strokeOpacity = 1;
-			  valueAxis.renderer.line.strokeWidth = 2;
-			  valueAxis.renderer.line.stroke = series.stroke;
-			  valueAxis.renderer.labels.template.fill = series.stroke;
-			  valueAxis.renderer.opposite = opposite;
-			  valueAxis.renderer.grid.template.disabled = true;
-			}
-
-			createAxisAndSeries("visits", "Visits", false, "circle");
-			createAxisAndSeries("views", "Views", true, "triangle");
-			// createAxisAndSeries("hits", "Hits", true, "rectangle");
-
-			// Add legend
-			chart.legend = new am4charts.Legend();
-
-			// Add cursor
-			chart.cursor = new am4charts.XYCursor();
-
-			// generate some random data, quite different range
-			function generateChartData() {
-			  var chartData = [];
-			  var firstDate = new Date();
-			  firstDate.setDate(firstDate.getDate() - 100);
-			  firstDate.setHours(0, 0, 0, 0);
-
-			  var visits = 1600;
-			  var hits = 2900;
-			  var views = 8700;
-
-			  for (var i = 0; i < 15; i++) {
-			    // we create date objects here. In your data, you can have date strings
-			    // and then set format of your dates using chart.dataDateFormat property,
-			    // however when possible, use date objects, as this will speed up chart rendering.
-			    var newDate = new Date(firstDate);
-			    newDate.setDate(newDate.getDate() + i);
-
-			    visits += Math.round((Math.random()<0.5?1:-1)*Math.random()*10);
-			    hits += Math.round((Math.random()<0.5?1:-1)*Math.random()*10);
-			    views += Math.round((Math.random()<0.5?1:-1)*Math.random()*10);
-
-			    chartData.push({
-			      date: newDate,
-			      visits: visits,
-			      hits: hits,
-			      views: views
-			    });
-			  }
-			  return chartData;
-			}
-
-			}); // end am4core.ready()
+			new Chart(document.getElementById("chart_keuangan"), {
+				type: 'line',
+				data: {
+					labels: ['Januari', 'Februari', 'Maret'],
+					datasets: [{
+						data: [
+							25000000,
+							20000000,
+							30000000
+						],
+						label: "Pemasukan",
+						borderColor: window.chartColors.green,
+						backgroundColor: '#4bc0c047',
+						fill: false
+					  }, {
+						  data: [
+							20000000,
+  							15000000,
+  							25000000
+	  					],
+						label: "Pengeluaran",
+						borderColor: window.chartColors.red,
+						backgroundColor: '#ff638447',
+						fill: false
+					  }
+					]
+				},
+				options: {
+					responsive: true,
+					title: {
+					  display: false,
+					  text: 'Grafik Keuangan'
+				  	},
+					tooltips: {
+						mode: 'index',
+						intersect: false,
+					},
+					hover: {
+						mode: 'nearest',
+						intersect: true
+					}
+				}
+			});
 		</script>
+
+		<!-- <script>
+			new Chart(document.getElementById("chart_treatment"), {
+				type: 'bar',
+				data: {
+					labels: ['Januari', 'Februari', 'Maret'],
+					datasets: [{
+						data: [
+							25000000,
+							20000000,
+							30000000
+						],
+						label: "Pemasukan",
+						borderColor: window.chartColors.green,
+						backgroundColor: '#4bc0c047',
+						fill: false
+					  }, {
+						  data: [
+							20000000,
+  							15000000,
+  							25000000
+	  					],
+						label: "Pengeluaran",
+						borderColor: window.chartColors.red,
+						backgroundColor: '#ff638447',
+						fill: false
+					  }
+					]
+				},
+				options: {
+					responsive: true,
+					title: {
+					  display: false,
+					  text: 'World population per region (in millions)'
+				  	},
+					tooltips: {
+						mode: 'index',
+						intersect: false,
+					},
+					hover: {
+						mode: 'nearest',
+						intersect: true
+					}
+				}
+			});
+		</script> -->
 
 		<script>
 			am4core.ready(function() {
