--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -562,7 +562,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															<label class="custom-file-label" for="payroll_foto">Choose file</label>
 														</div>
 														<span class="form-text"  style="margin: 1rem 0 1rem 0">Image preview :</span>
-														<div id="uploaded_image" align="center" class="image-cropper"></div>
+														<div id="uploaded_image" align="center" class="image-cropper" style="width:auto; height: auto"></div>
                                                     </div>
                                                 </div>
 	                                        </div>
@@ -576,7 +576,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
 
 							<div id="uploadimageModal" class="modal" role="dialog">
-								<div class="modal-dialog">
+								<div class="modal-dialog modal-lg">
 									<div class="modal-content">
 										<div class="modal-header">
 											<h5 class="modal-title" id="exampleModalLabel">Upload Image</h5>
@@ -586,7 +586,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="modal-body">
 											<div align="center" class="row">
 												<div class="col-12">
-													<div id="image_demo" style="width:80%; margin-top:30px"></div>
+													<div id="image_demo" style="width:100%; margin-top:30px"></div>
 												</div>
 												<div class="col-12">
 													<button class="btn btn-success crop_foto">Crop & Upload Image</button>
@@ -693,13 +693,13 @@ License: You must have a valid license purchased only from themeforest(the above
 				$image_crop = $('#image_demo').croppie({
 					enableExif: true,
 					viewport: {
-						width:100,
-						height:100,
-						type:'circle'
+						width:640,
+						height:480,
+						type:'rectangle'
 					},
 					boundary:{
-						width:100,
-						height:100
+						width:720,
+						height:540
 					}
 				});
 
