--- a/user_therapist/treatment_detail_ongoing.html
+++ b/user_therapist/treatment_detail_ongoing.html
@@ -413,7 +413,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
 
 							<div id="uploadimageModal" class="modal" role="dialog">
-								<div class="modal-dialog">
+								<div class="modal-dialog modal-lg">
 									<div class="modal-content">
 										<div class="modal-header">
 											<h5 class="modal-title" id="exampleModalLabel">Upload Image</h5>
@@ -423,7 +423,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="modal-body">
 											<div align="center" class="row">
 												<div class="col-12">
-													<div id="image_demo" style="width:80%; margin-top:30px"></div>
+													<div id="image_demo" style="width:100%; margin-top:30px"></div>
 												</div>
 												<div class="col-12">
 													<button class="btn btn-success crop_foto">Crop & Upload Image</button>
@@ -557,13 +557,13 @@ License: You must have a valid license purchased only from themeforest(the above
 				$image_crop = $('#image_demo').croppie({
 					enableExif: true,
 					viewport: {
-						width:100,
-						height:100,
-						type:'circle'
+						width:640,
+						height:480,
+						type:'rectangle'
 					},
 					boundary:{
-						width:100,
-						height:100
+						width:720,
+						height:540
 					}
 				});
 
