--- a/user_superadmin/hr_laporan.html
+++ b/user_superadmin/hr_laporan.html
@@ -46,13 +46,6 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!--end::Layout Skins -->
 		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
-
-		<style>
-			.chart-height {
-			  width: 100%;
-			  height: 400px;
-			}
-		</style>
 	</head>
 
 	<!-- end::Head -->
@@ -509,9 +502,9 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Global Theme Bundle -->
 
 		<!--begin::Page Vendors(used by this page) -->
-		<script src="https://www.amcharts.com/lib/4/core.js"></script>
-		<script src="https://www.amcharts.com/lib/4/charts.js"></script>
-		<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+		<script src="assets/js/vendor/amcharts/core.js" type="text/javascript"></script>
+		<script src="assets/js/vendor/amcharts/charts.js" type="text/javascript"></script>
+		<script src="assets/js/vendor/amcharts/animated.js" type="text/javascript"></script>
 
 		<!--end::Page Vendors -->
 
@@ -534,97 +527,97 @@ License: You must have a valid license purchased only from themeforest(the above
 
 			chart.data = [{
 				"date": "2018-01-01",
-				"steps": 4561
+				"treatments": 4561
 			}, {
 				"date": "2018-01-02",
-				"steps": 5687
+				"treatments": 5687
 			}, {
 				"date": "2018-01-03",
-				"steps": 6348
+				"treatments": 6348
 			}, {
 				"date": "2018-01-04",
-				"steps": 4878
+				"treatments": 4878
 			}, {
 				"date": "2018-01-05",
-				"steps": 9867
+				"treatments": 9867
 			}, {
 				"date": "2018-01-06",
-				"steps": 7561
+				"treatments": 7561
 			}, {
 				"date": "2018-01-07",
-				"steps": 1287
+				"treatments": 1287
 			}, {
 				"date": "2018-01-08",
-				"steps": 3298
+				"treatments": 3298
 			}, {
 				"date": "2018-01-09",
-				"steps": 5697
+				"treatments": 5697
 			}, {
 				"date": "2018-01-10",
-				"steps": 4878
+				"treatments": 4878
 			}, {
 				"date": "2018-01-11",
-				"steps": 8788
+				"treatments": 8788
 			}, {
 				"date": "2018-01-12",
-				"steps": 9560
+				"treatments": 9560
 			}, {
 				"date": "2018-01-13",
-				"steps": 11687
+				"treatments": 11687
 			}, {
 				"date": "2018-01-14",
-				"steps": 5878
+				"treatments": 5878
 			}, {
 				"date": "2018-01-15",
-				"steps": 9789
+				"treatments": 9789
 			}, {
 				"date": "2018-01-16",
-				"steps": 3987
+				"treatments": 3987
 			}, {
 				"date": "2018-01-17",
-				"steps": 5898
+				"treatments": 5898
 			}, {
 				"date": "2018-01-18",
-				"steps": 9878
+				"treatments": 9878
 			}, {
 				"date": "2018-01-19",
-				"steps": 13687
+				"treatments": 13687
 			}, {
 				"date": "2018-01-20",
-				"steps": 6789
+				"treatments": 6789
 			}, {
 				"date": "2018-01-21",
-				"steps": 4531
+				"treatments": 4531
 			}, {
 				"date": "2018-01-22",
-				"steps": 5856
+				"treatments": 5856
 			}, {
 				"date": "2018-01-23",
-				"steps": 5737
+				"treatments": 5737
 			}, {
 				"date": "2018-01-24",
-				"steps": 9987
+				"treatments": 9987
 			}, {
 				"date": "2018-01-25",
-				"steps": 16457
+				"treatments": 16457
 			}, {
 				"date": "2018-01-26",
-				"steps": 7878
+				"treatments": 7878
 			}, {
 				"date": "2018-01-27",
-				"steps": 6845
+				"treatments": 6845
 			}, {
 				"date": "2018-01-28",
-				"steps": 4659
+				"treatments": 4659
 			}, {
 				"date": "2018-01-29",
-				"steps": 7892
+				"treatments": 7892
 			}, {
 				"date": "2018-01-30",
-				"steps": 7362
+				"treatments": 7362
 			}, {
 				"date": "2018-01-31",
-				"steps": 3268
+				"treatments": 3268
 			}];
 
 			chart.dateFormatter.inputDateFormat = "YYYY-MM-dd";
@@ -640,9 +633,9 @@ License: You must have a valid license purchased only from themeforest(the above
 			var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
 
 			var series = chart.series.push(new am4charts.ColumnSeries);
-			series.dataFields.valueY = "steps";
+			series.dataFields.valueY = "treatments";
 			series.dataFields.dateX = "date";
-			series.tooltipText = "{valueY.value}";
+			series.tooltipText = "Treatment : [bold]{valueY.value}";
 			series.tooltip.pointerOrientation = "vertical";
 			series.tooltip.hiddenState.properties.opacity = 1;
 			series.tooltip.hiddenState.properties.visible = true;
@@ -656,7 +649,6 @@ License: You must have a valid license purchased only from themeforest(the above
 			columnTemplate.adapter.add("fill", function (fill, target) {
 				return am4core.color("#8cdbd7");
 			})
-
 
 			chart.cursor = new am4charts.XYCursor();
 			chart.cursor.behavior = "none";
