--- a/user_superadmin/finance_laporan.html
+++ b/user_superadmin/finance_laporan.html
@@ -577,33 +577,10 @@ License: You must have a valid license purchased only from themeforest(the above
 			// Create chart instance
 			var chart = am4core.create("chart_keuangan", am4charts.XYChart);
 			chart.paddingRight = 20;
+			chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
 
 			// Add data
-			chart.data = [{
-			  "bulan": "Januari",
-			  "pemasukan": 2100,
-			  "pengeluaran": 2000
-			}, {
-			  "bulan": "Februari",
-			  "pemasukan": 2700,
-			  "pengeluaran": 2500
-			}, {
-			  "bulan": "Maret",
-			  "pemasukan": 3000,
-			  "pengeluaran": 2300
-			}, {
-			  "bulan": "April",
-			  "pemasukan": 3200,
-			  "pengeluaran": 1500
-			}, {
-			  "bulan": "Mei",
-			  "pemasukan": 1500,
-			  "pengeluaran": 1000
-			}, {
-			  "bulan": "Juni",
-			  "pemasukan": 2000,
-			  "pengeluaran": 1800
-			}];
+			chart.dataSource.url = "source/chart/keuangan.json";
 
 			// Create axes
 			var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
@@ -654,102 +631,10 @@ License: You must have a valid license purchased only from themeforest(the above
 			 */
 
 			var chart = am4core.create("chart_treatment", am4charts.XYChart);
+			chart.paddingRight = 20;
 			chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
 
-			chart.data = [{
-				"date": "2018-01-01",
-				"treatments": 4561
-			}, {
-				"date": "2018-01-02",
-				"treatments": 5687
-			}, {
-				"date": "2018-01-03",
-				"treatments": 6348
-			}, {
-				"date": "2018-01-04",
-				"treatments": 4878
-			}, {
-				"date": "2018-01-05",
-				"treatments": 9867
-			}, {
-				"date": "2018-01-06",
-				"treatments": 7561
-			}, {
-				"date": "2018-01-07",
-				"treatments": 1287
-			}, {
-				"date": "2018-01-08",
-				"treatments": 3298
-			}, {
-				"date": "2018-01-09",
-				"treatments": 5697
-			}, {
-				"date": "2018-01-10",
-				"treatments": 4878
-			}, {
-				"date": "2018-01-11",
-				"treatments": 8788
-			}, {
-				"date": "2018-01-12",
-				"treatments": 9560
-			}, {
-				"date": "2018-01-13",
-				"treatments": 11687
-			}, {
-				"date": "2018-01-14",
-				"treatments": 5878
-			}, {
-				"date": "2018-01-15",
-				"treatments": 9789
-			}, {
-				"date": "2018-01-16",
-				"treatments": 3987
-			}, {
-				"date": "2018-01-17",
-				"treatments": 5898
-			}, {
-				"date": "2018-01-18",
-				"treatments": 9878
-			}, {
-				"date": "2018-01-19",
-				"treatments": 13687
-			}, {
-				"date": "2018-01-20",
-				"treatments": 6789
-			}, {
-				"date": "2018-01-21",
-				"treatments": 4531
-			}, {
-				"date": "2018-01-22",
-				"treatments": 5856
-			}, {
-				"date": "2018-01-23",
-				"treatments": 5737
-			}, {
-				"date": "2018-01-24",
-				"treatments": 9987
-			}, {
-				"date": "2018-01-25",
-				"treatments": 16457
-			}, {
-				"date": "2018-01-26",
-				"treatments": 7878
-			}, {
-				"date": "2018-01-27",
-				"treatments": 6845
-			}, {
-				"date": "2018-01-28",
-				"treatments": 4659
-			}, {
-				"date": "2018-01-29",
-				"treatments": 7892
-			}, {
-				"date": "2018-01-30",
-				"treatments": 7362
-			}, {
-				"date": "2018-01-31",
-				"treatments": 3268
-			}];
+			chart.dataSource.url = "source/chart/treatment.json";
 
 			chart.dateFormatter.inputDateFormat = "YYYY-MM-dd";
 			chart.zoomOutButton.disabled = true;
